[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "loadfactors_setuptools"
authors = [{name = "LM", email = "pippo@pluto.it"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
version ="0.1.0"
dependencies = [
    'numpy',
    'pandas'
]

[project.urls]
Home = "http://yournetworth.eu"
